--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,4 +10,7 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
+  <view>
+    <button size="mini" type="primary" class="index-search">搜索</button>
+  </view>
 </view>
