--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,16 +1,9 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+<page>
+    <swiper indicator-dots="{{bannerData.indicatorDots}}" autoplay="{{bannerData.autoplay}}" interval="{{bannerData.interval}}" duration="{{bannerData.duration}}" class="banner">
+    <block wx:for="{{bannerData.imgUrls}}" wx:key="key">
+      <swiper-item>
+        <image src="{{item}}" class="slide-image" width="100%"/>
+      </swiper-item>
     </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-  <view>
-    <button size="mini" type="primary" class="index-search">搜索</button>
-  </view>
-</view>
+  </swiper>
+</page>
